2005-11-21  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/utils/ioport/Makefile.am:
	Bug #5118: Use "rm -f" instead of "$(RM)", which isn't always defined.

2005-11-20  Felix Kuehling  <fxkuehl@gmx.de>

	* configure.ac:
	Fix Xprt library dependencies in the case that Xprint is
	auto-detected by configure.

2005-11-20  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	* xkb/Makefile.am:
	Make sure XKM_OUTPUT_DIR (used in code) ends in / (so paths don't
	get hosed when appending file names) but XKB_COMPILED_DIR (used 
	in Makefiles) does not so install-sh -d doesn't get confused when
	the directory already exists.

2005-11-19  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Add xext to list of modules xorgcfg depends on.

2005-11-19  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* GL/glx/Makefile.am:
	* Xprint/Makefile.am:
	* Xprint/pcl/Makefile.am:
	* Xprint/ps/Makefile.am:
	* Xprint/raster/Makefile.am:
	* configure.ac:
	* hw/xfree86/utils/xorgconfig/Makefile.am:
	* xorg-server.pc.in:
	Update dependencies to work with separate build roots.

2005-11-18  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/os-support/linux/Makefile.am:
	Bug #4928: Unbreak Makefile.am for Alpha chips. (Stefan DeRoeck)

	* configure.ac:
	* hw/xfree86/dixmods/Makefile.am:
	Bug #4824: Build XTrap support by default, matching monolith.

2005-11-16  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Fix builds when not building the Xorg DDX.

2005-11-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* GL/glx/glcontextmodes.c:
	* GL/glx/glcontextmodes.h:
	* GL/symlink-mesa.sh:
	Use glcontextmodes.[ch] from Mesa.

2005-11-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* GL/glx/Makefile.am:
	Add GL_CFLAGS so that GLX can find its proto headers when using
	separate build dirs.

2005-11-13  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Default xkb-output directory needs trailing slash.
